# ltsp-manager

./: .gitignore  AUTHORS  TODO  ltsp-manager.8  ltsp-shared-folders.8  meson.build  sch-scripts.8  sch-scripts.desktop  setup.py  shared-folders.8  test-install.sh
conf/: X50-shared-folders.in  com.example.SampleService.service  io.github.ltsp-manager.conf  io.github.ltsp-manager.policy  io.github.ltsp-manager.service.in  ltsp-shared-folders  ltsp-shared-folders.service  ltsp-shared-folders.service.in  meson.build
data/: ltsp-manager.desktop.in  ltsp-manager.desktop.in.in  ltsp-manager.gresource.xml  ltsp-shared-folders.desktop.in  ltsp-shared-folders.desktop.in.in  meson.build  org.ltsp.ltsp-manager.policy.in.in
data/icons/: create_icons.sh  meson.build
data/its/: polkit.loc
data/ui/: about_dialog.ui  create_users.ui  dialogs.ui  group_form.ui  import_dialog.ui  import_dialog19.ui  ip_dialog.ui  ltsp-manager.ui  ltsp19.ui  ltsp_info.ui  signup_form.ui  signup_server.ui  signup_settings.ui  user_form.ui  user_form19.ui
debian/: changelog  control  copyright  ltsp-manager.gconf-defaults  ltsp-manager.if-up  ltsp-manager.install  ltsp-manager.manpages  ltsp-manager.postinst  ltsp-manager.postrm  ltsp-shared-folders.init  rules  sch-scripts.examples  sch-scripts.gsettings-override  sch-scripts.if-up  sch-scripts.install  sch-scripts.manpages  sch-scripts.postinst  sch-scripts.postrm  shared-folders.default  shared-folders.init  z20_sch-scripts.gschema.override
etc/.java/deployment/: deployment.properties
etc/X11/: Xkbmap
etc/lightdm/lightdm.conf.d/: 90_sch-scripts.conf
etc/ltsp/: ltsp-client.conf  ltsp-config.conf  update-kernels.conf
etc/ltsp-manager/diverted/: README
etc/polkit-1/localauthority/20-org.d/: usershutdown.pkla
etc/sch-scripts/diverted/: README
etc/xdg/autostart/: shared-folders.desktop
examples/: lts-el.conf  ltsp-server-dnsmasq-el.conf
initramfs-tools/scripts/init-premount/: udhcp-sis190
lib/systemd/system/: ltsp-shared-folders.service
ltsp/init-ltsp.d/: 50-flash-no-sse2
po/: LINGUAS  POTFILES  cs.po  de.po  el.po  en_GB.po  ltsp-manager.pot  meson.build  pl.po  update-pot
sbin/: ltsp-manager  sch-scripts  shared-folders
sch-scripts/: about_dialog.py  about_dialog.ui  common.py  common.sh  config.py  create-symlinks  create_users.py  create_users.ui  dialogs.py  export_dialog.py  gnome-panel  group_form.py  group_form.ui  import_dialog.py  ip_dialog.py  ip_dialog.ui  iso843.py  libshare.py  libuser.py  ltsp_info.ui  main.glade  main.py  maintenance.py  maintenance.ui  parsers.py  purge-kernels  purge_kernels.py  purge_kernels.ui  run-in-terminal  sch-scripts.py  sch-scripts.ui  shared_folders.py  signup  signup.py  signup_form.ui  signup_server.py  signup_server.ui  user_form.py  user_form.ui  version.py
share/applications/: ltsp-manager.desktop  sch-scripts.desktop
share/ldm/rc.d/: X50-create-symlinks  X50-flashback-session  X50-shared-folders
share/ltsp-manager/: about_dialog.py  about_dialog.ui  common.py  common.sh  config.py  create-symlinks  create_users.py  create_users.ui  dialogs.py  dialogs.ui  export_dialog.py  group_form.py  group_form.ui  if-up.sh  import_dialog.py  import_dialog.ui  initial-setup.sh  ip_dialog.py  ip_dialog.ui  iso843.py  libuser.py  ltsp-manager.js  ltsp-manager.py  ltsp-manager.ui  ltsp_info.py  ltsp_info.ui  ltsp_shared_folders.py  maintenance.py  maintenance.ui  parsers.py  run-in-terminal  run-in-terminal.sh  shared_folders.py  signup.py  signup_form.ui  signup_server.py  signup_server.ui  signup_settings.ui  tuxtype  unzip  (+3 more)
share/ltsp/ltsp_config.d/: 29-ltsp-manager-defaults  29-sch-scripts-defaults  49_ldm-sshoptions
share/polkit-1/actions/: gr.sch.ts.ltsp-manager.policy  gr.sch.ts.sch-scripts.policy  org.ltsp.ltsp-manager.policy
share/sch-scripts/: about_dialog.py  about_dialog.ui  common.py  config.py  create-symlinks  create_users.py  export_dialog.py  gnome-panel  group_form.py  group_form.ui  import_dialog.py  import_dialog.ui  ip_dialog.py  ip_dialog.ui  iso843.py  ltsp_info.py  ltsp_info.ui  maintenance.py  mimeapps.list  parsers.py  run-in-terminal  sch-scripts.js  sch-scripts.py  sch-scripts.ui  signup.py  signup_server.py  signup_server.ui  version.py
src/: about_dialog.py  common.py  config.py  create_users.py  dbus_account_service.py  dialogs.py  dict_view.py  export_dialog.py  group_form.py  import_dialog.py  ip_dialog.py  iso843.py  libuser.py  ltsp-manager.py  ltsp19.py  ltsp_info.py  ltsp_shared_folders.py  meson.build  parsers.py  paths.ini.in  paths.py  paths.py.in  signup.py  signup_server.py  test.py  user_elements.py  user_form.py  version.py
src/commands/: ltsp-manager  ltsp-manager.in  ltsp-shared-folders  ltsp-shared-folders.in  ltsp-signup.in  signup
src/scripts/: before-uninstall.sh  before-uninstall.sh.in  common.sh  common.sh.in  create-symlinks.sh.in  if-up.sh.in  initial-setup.sh.in  meson.build  run-in-terminal.sh.in
test/: test-install.sh  test.csv
web/: add-repo  sch-scripts
