project('ltsp-manager',
  version: '18.04.2',
  meson_version: '>= 0.46.0',
)
i18n = import('i18n')
python = import('python3')
project_id = 'org.ltsp.ltsp-manager'

prefix = get_option('prefix')

bindir = join_paths(prefix, get_option('bindir'))
sbindir = join_paths(prefix, get_option('sbindir'))
libdir = join_paths(prefix, get_option('libdir'))
datadir = join_paths(prefix, get_option('datadir'))
pkgdatadir = join_paths(datadir, meson.project_name())
scriptsdir = join_paths(pkgdatadir, 'scripts')
libexecdir = join_paths(prefix, get_option('libexecdir'))
sysconfdir = join_paths(prefix, get_option('sysconfdir'))
localstatedir = join_paths(prefix, get_option('localstatedir'))
mandir = join_paths(prefix, get_option('mandir'))
localedir = join_paths(prefix, get_option('localedir'))

message(bindir)
message(sbindir)
message(libdir)
message(datadir)
message(pkgdatadir)
message(scriptsdir)
message(libexecdir)
message(sysconfdir)
message(localstatedir)
message(mandir)
message(localedir)
#message()
conf = configuration_data()
conf.set('PYTHON', python.find_python().path())
conf.set('VERSION', meson.project_version())
conf.set('localedir', localedir)
conf.set('datadir', datadir)
conf.set('pkgdatadir', pkgdatadir)
conf.set('bindir', bindir)
conf.set('sbindir', sbindir)
conf.set('scriptsdir', scriptsdir)
conf.set('sysconfdir', sysconfdir)

subdir('data')
subdir('src')
subdir('conf')
subdir('po')
#meson.add_install_script('meson_post_install.py')